migrate from url to uri